se añade obtención de mejor resultado para los metodos

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <div class="embed-responsive">
               <div id="grafico" class="jxgbox" style="height:400px;"></div>
             </div>
+            <div id="resultado"></div>
           </div>
         </div>
 
