--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </div>
               <div class="col-auto">
                 <label class="sr-only" for="inlineDecimales">Decimales</label>
-                <div class="input-group">
+                <div id="decimales" class="input-group">
                   <div class="input-group-addon">Decimales</div>
                   <input type="number" name="y" class="form-control" id="precision" value="5">
                 </div>
@@ -100,7 +100,7 @@
         <div class="row my-4">
           <div class="col-sm-4">
             <h3>Tabla de puntos discretos</h3>
-            <div class="table-responsive" style="max-height: 230px">
+            <div class="table-responsive" style="max-height: 500px">
               <table class="table table-striped table-bordered" id="tablaDiscreta">
                 <thead class="thead-light">
                   <th>`x`</th>
@@ -121,7 +121,7 @@
             <div id="resultado"></div>
           </div>
         </div>
-
+        <hr id=separador1 style="border-color: #007bff; border-width: unset; display:none;">
         <div class="row" style="display:none;" id="divTablaRecta"> 
           <div class="col">
             <h3>Aproximación por recta</h3>
@@ -149,7 +149,7 @@
             <div id="funcionRecta"></div>
           </div>
         </div>
-        
+        <hr id=separador2 style="border-color: #007bff; border-width: unset; display:none;">
         <div class="row" style="display:none;" id="divTablaParabola"> 
           <div class="col">
             <h3>Aproximación por parábola</h3>
@@ -180,7 +180,7 @@
             <div id="funcionParabola"></div>
           </div>
         </div>
-
+        <hr id=separador3 style="border-color: #007bff; border-width: unset; display:none;">
         <div class="row" style="display:none;" id="divTablaExponencial"> 
           <div class="col">
             <h3>Aproximación por exponencial</h3>
@@ -209,7 +209,7 @@
             <div id="funcionExponencial"></div>
           </div>
         </div>
-
+        <hr id=separador4 style="border-color: #007bff; border-width: unset; display:none;">
         <div class="row" style="display:none;" id="divTablaPotencial"> 
           <div class="col">
             <h3>Aproximación por potencial</h3>
@@ -239,7 +239,7 @@
             <div id="funcionPotencial"></div>
           </div>
         </div>
-
+        <hr id=separador5 style="border-color: #007bff; border-width: unset; display:none;">
         <div class="row" style="display:none;" id="divTablaHiperbola"> 
           <div class="col">
             <h3>Aproximación por hipérbola</h3>
@@ -268,7 +268,7 @@
             <div id="funcionHiperbola"></div>
           </div>
         </div>
-
+        <hr id=separador6 style="border-color: #007bff; border-width: unset; display:none;">
       </div>
     </main>
 
